--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -14330,11 +14330,11 @@ msgstr "Príručka"
 msgid "You should write a message"
 msgstr "Mali by ste napísať správu"
 
-msgid "This message is to inform you that has created a new course on platform"
-msgstr "Táto správa vás informuje, že bol vytvorený nový kurz na platforme"
+msgid "This message is to inform you that a new course has been created on %s"
+msgstr "Táto správa vás informuje, že bol vytvorený nový kurz na %s"
 
-msgid "New course created in"
-msgstr "Nový kurz vytvorený v"
+msgid "New course created on %s"
+msgstr "Nový kurz vytvorený v %s"
 
 msgid "The teacher is set as you for now. You can change this setting later in the course configuration settings"
 msgstr "Lektor je nastavený teraz ako vy. Toto nastavenie môžete zmeniť neskôr v nastavení konfigurácie kurzu"
